[gd_scene load_steps=37 format=3 uid="uid://bsn03r0joabwh"]

[ext_resource type="Script" path="res://Scripts/MushroomEnemy.gd" id="1_jdqge"]
[ext_resource type="Texture2D" uid="uid://72htghrnrm6n" path="res://Assets/SpriteSheets/Monsters/BlueMushroom/AttackMush.png" id="2_0jiig"]
[ext_resource type="Texture2D" uid="uid://c5win5pjwk4e5" path="res://Assets/SpriteSheets/Monsters/BlueMushroom/run.png" id="2_10118"]
[ext_resource type="Texture2D" uid="uid://c3rnt5yu6kin2" path="res://Assets/SpriteSheets/Monsters/BlueMushroom/Take Hit-export.png" id="3_8nk6k"]
[ext_resource type="Texture2D" uid="uid://cut87w6m3pkes" path="res://Assets/SpriteSheets/Monsters/BlueMushroom/Take Hit normal.png" id="3_p4dxc"]
[ext_resource type="Texture2D" uid="uid://de78fosdhsjqw" path="res://Assets/UI/wasdSpriteSheet-Sheet.png" id="8_bd6yy"]
[ext_resource type="AudioStream" uid="uid://cyjfdmg1yhcod" path="res://Assets/Audio/574821__wesleyextreme_gamer__slash1.mp3" id="9_xepg1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qwjio"]
atlas = ExtResource("2_0jiig")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1lru"]
atlas = ExtResource("2_0jiig")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrxf5"]
atlas = ExtResource("2_0jiig")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5uby"]
atlas = ExtResource("2_0jiig")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lch2r"]
atlas = ExtResource("2_0jiig")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi4vu"]
atlas = ExtResource("2_0jiig")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y16x"]
atlas = ExtResource("2_0jiig")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvltn"]
atlas = ExtResource("2_0jiig")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_841h8"]
atlas = ExtResource("3_8nk6k")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrcwf"]
atlas = ExtResource("3_8nk6k")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q54pi"]
atlas = ExtResource("3_8nk6k")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw7f1"]
atlas = ExtResource("3_8nk6k")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5f54"]
atlas = ExtResource("3_8nk6k")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xwh"]
atlas = ExtResource("3_p4dxc")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4ihb"]
atlas = ExtResource("3_p4dxc")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_whhjl"]
atlas = ExtResource("3_p4dxc")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qx45"]
atlas = ExtResource("3_p4dxc")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqx08"]
atlas = ExtResource("3_p4dxc")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk2y2"]
atlas = ExtResource("2_10118")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_of8ce"]
atlas = ExtResource("2_10118")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_orcbn"]
atlas = ExtResource("2_10118")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xsr4"]
atlas = ExtResource("2_10118")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mddp"]
atlas = ExtResource("2_10118")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p352"]
atlas = ExtResource("2_10118")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_una2h"]
atlas = ExtResource("2_10118")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ghxq"]
atlas = ExtResource("2_10118")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_jc6k5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwjio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1lru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrxf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5uby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lch2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi4vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y16x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvltn")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_841h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrcwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q54pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw7f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5f54")
}],
"loop": false,
"name": &"fastHurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4ihb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whhjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qx45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqx08")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk2y2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of8ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orcbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xsr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mddp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p352")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_una2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ghxq")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ta83j"]
size = Vector2(46, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i551l"]
size = Vector2(28, 59)

[node name="EnemyBody" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jdqge")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(75, 74)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jc6k5")
animation = &"walking"
autoplay = "walking"
flip_h = true

[node name="EnemyCol" type="CollisionShape2D" parent="."]
position = Vector2(76, 88.5)
shape = SubResource("RectangleShape2D_ta83j")

[node name="WeakPointSprite" type="Sprite2D" parent="."]
position = Vector2(76, 28)
scale = Vector2(0.26, 0.26)
texture = ExtResource("8_bd6yy")
hframes = 4

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackCol" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(38, 90)
shape = SubResource("RectangleShape2D_i551l")
debug_color = Color(1, 0, 0, 0.419608)

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_xepg1")
volume_db = -15.0
bus = &"SFX"

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
